--- a/ent2.html
+++ b/ent2.html
@@ -13,7 +13,8 @@
 	<h1>Dreamville Festival 2020</h1>
 	<p>When: April 4th, 2020</p>
 	<p>Where: Raleigh, NC</p>
-	<h2>Plan tickets now and get to see artist perfrom live!!</h2>
+	<p> Check out last year's event <a href= "resources/videoplayback.webm">Video</a></p>
+	<h2>Purchase tickets now and get to see artist perfrom live!!</h2>
 	<form class="myForm" method="get" enctype="application/x-www-form-urlencoded" action="/html/codes/html_form_handler.cfm">
 
 <p>
@@ -51,6 +52,7 @@
 
 
 <p><button>Submit Booking</button></p>
+<p>Click here to pay on <a href="https://www.paypal.com/us/home"> PayPal</a></p>		
 
 </form>
 </body>
